# EventRouter/api/errors/errors.go
@@ -1,11 +1,19 @@
 package errors
 
-// ApiError
-// description: An ApiEror is an error that is used when the required input fails validation.
+// An error occurred. This can be an invalid input of other unexpected error occurred.
 // swagger:response ApiError
 type ApiError struct {
 	Code    int    `json:"code"`
 	Message string `json:"message"`
+}
+
+// ApiErrorResponse
+// swagger:response ApiError
+type apiErrorResponse struct {
+	// API Error
+	//
+	// in: body
+	apiError *ApiError `json:"error"`
 }
 
 func NewInternalError() *ApiError {
